# CMake-Qt5-Qml-Example

./: .gitignore  CMakeLists.txt  README.adoc  install-opencv-4.1.0-and-qt5-on-ubuntu-18.04.sh
resources/: main.qml
